Fixed multiple things not working and bugging out. I want to sleep bro