@@ -3,123 +3,122 @@ package me.stickyballs2652.bonusSets.gui;
 import me.stickyballs2652.bonusSets.model.BonusSet;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
+import org.bukkit.Registry;
 import org.bukkit.attribute.Attribute;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.InventoryHolder;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 public class AttributeEditorHolder implements InventoryHolder {
-
-    private final Inventory insideheh;
-    private final String setId;
-    private final BonusSet existingSet;
-    private final Map<Attribute, Double> attributes;
-    private final List<Attribute> allAttributes = new ArrayList<>();
-    private int page = 0;
 
     public static final int PREV_PAGE_BTN = 45;
     public static final int SAVE_BACK_BTN = 49;
     public static final int NEXT_PAGE_BTN = 53;
 
+    private final Inventory inventory;
+    private final String setId;
+    private final BonusSet set;
+    private final Map<Attribute, Double> attributes = new HashMap<>();
+    private int page;
+    private final List<Attribute> availableAttributes = new ArrayList<>();
+
     public AttributeEditorHolder(String setId, BonusSet existingSet, Map<Attribute, Double> attributes) {
         this.setId = setId;
-        this.existingSet = existingSet;
-        this.attributes = attributes;
-        this.insideheh = Bukkit.createInventory(this, 54, "Edit attributes: " + setId);
+        this.set = existingSet;
+        this.page = 0;
+        if (attributes != null) {
+            this.attributes.putAll(attributes);
+        }
+        this.inventory = Bukkit.createInventory(this, 54, "Edit attributes");
 
-        this.allAttributes.addAll(Arrays.asList(Attribute.values()));
-        this.allAttributes.sort(Comparator.comparing(Enum::name));
-
+        for (Attribute attr : Registry.ATTRIBUTE) {
+            if (attr != null) {
+                availableAttributes.add(attr);
+            }
+        }
 
         render();
     }
 
     public void render() {
-        insideheh.clear();
+        inventory.clear();
 
-        int maxItemsPerPage = 36;
-        int startIndex = page * maxItemsPerPage;
-        int endIndex = Math.min(startIndex + maxItemsPerPage, allAttributes.size());
+        int startIndex = page * 36;
+        int endIndex = Math.min(startIndex + 36, availableAttributes.size());
 
         for (int i = startIndex; i < endIndex; i++) {
-            Attribute attr = allAttributes.get(i);
-            double currentVal = attributes.getOrDefault(attr, 0.0);
+            Attribute attr = availableAttributes.get(i);
+            int slot = i - startIndex;
 
-            ItemStack item = new ItemStack(currentVal > 0 ? Material.LIME_DYE : Material.GRAY_DYE);
+            double currentValue = attributes.getOrDefault(attr, 0.0);
+
+            ItemStack item = new ItemStack(currentValue > 0 ? Material.LIME_DYE : Material.GRAY_DYE);
             ItemMeta meta = item.getItemMeta();
             if (meta != null) {
-                meta.setDisplayName("§e " + attr.name());
-                meta.setLore(List.of(
-                        "§7Current Bonus: §a+" + currentVal,
-                        "§eLeft-Click: §f+1.0",
-                        "§eShift + Left-Click: §f+0.1",
-                        "§cRight-Click: §f-1.0",
-                        "§cShift + Right-Click: §f-0.1"
+                meta.setDisplayName("§e" + attr.getKey().getKey().toUpperCase());
+                meta.setLore(Arrays.asList(
+                        "§7Current bonus: §a+" + currentValue,
+                        "",
+                        "§eLeft click: §7+1.0",
+                        "§eShift Left-click: §7+0.1",
+                        "§cRight click: §7-1.0",
+                        "§cShift Right-click: §7-0.1"
                 ));
                 item.setItemMeta(meta);
             }
-            insideheh.setItem(i - startIndex, item);
-        }
-        ItemStack glass =  new ItemStack(Material.GRAY_STAINED_GLASS_PANE);
-        ItemMeta gMeta = glass.getItemMeta();
-        if (gMeta != null) {
-            gMeta.setDisplayName(" ");
-            glass.setItemMeta(gMeta);
-        }
-        for (int i = 36; i < 45; i++) {
-            insideheh.setItem(i, glass);
+
+            inventory.setItem(slot, item);
         }
 
         if (page > 0) {
-            ItemStack prev = new ItemStack(Material.PAPER);
-            ItemMeta pMeta = prev.getItemMeta();
-            if (pMeta != null) {
-                pMeta.setDisplayName("§ePrevious page (" + page + ")");
-                prev.setItemMeta(pMeta);
-            }
-            insideheh.setItem(PREV_PAGE_BTN, prev);
+            inventory.setItem(PREV_PAGE_BTN, createItem(Material.ARROW, "§aPrevious page"));
+        }
+        if (endIndex < availableAttributes.size()) {
+            inventory.setItem(NEXT_PAGE_BTN, createItem(Material.ARROW, "§aNext page"));
         }
 
-        if (endIndex < allAttributes.size()) {
-            ItemStack next = new ItemStack(Material.PAPER);
-            ItemMeta nMeta = next.getItemMeta();
-            if (nMeta != null) {
-                nMeta.setDisplayName("§eNext page (" + (page + 2) + ")");
-                next.setItemMeta(nMeta);
-            }
-            insideheh.setItem(NEXT_PAGE_BTN, next);
-        }
+        inventory.setItem(SAVE_BACK_BTN, createItem(Material.BARRIER, "§cBack to set 3ditor"));
+    }
 
-        ItemStack saveBack = new ItemStack(Material.ARROW);
-        ItemMeta saveMeta = saveBack.getItemMeta();
-        if (saveMeta != null) {
-            saveMeta.setDisplayName("§aSave and go back");
-            saveBack.setItemMeta(saveMeta);
+    private ItemStack createItem(Material mat, String name) {
+        ItemStack item = new ItemStack(mat);
+        ItemMeta meta = item.getItemMeta();
+        if (meta != null) {
+            meta.setDisplayName(name);
+            item.setItemMeta(meta);
         }
-        insideheh.setItem(SAVE_BACK_BTN, saveBack);
+        return item;
     }
 
     public String getSetId() {
         return setId;
     }
-    public BonusSet getExistingSet() {
-        return existingSet;
-    }
+
     public Map<Attribute, Double> getAttributes() {
         return attributes;
     }
+
+    public BonusSet getSet() {
+        return set;
+    }
+
     public int getPage() {
         return page;
     }
+
     public void setPage(int page) {
         this.page = page;
     }
 
     @Override
     public Inventory getInventory() {
-        return insideheh;
+        return inventory;
     }
 }
